@@ -2,16 +2,24 @@ subarch chrp_rs6k
 cpuinfo chrp_rs6k.cpuinfo
 majors 2.6
 flavour power4
-kernel-2.6 kernel-image-2.6.8-power4-smp
+kernel-2.6 kernel-image-2.6-power4-smp
 usable \
+  kernel-image-2.6-power4 \
+  kernel-image-2.6-power4-smp \
   kernel-image-2.6.8-power4 \
   kernel-image-2.6.8-power4-smp
 unusable \
   kernel-image-2.4.27-apus \
   kernel-image-apus \
+  kernel-image-2.4-powerpc \
+  kernel-image-2.4-powerpc-smp \
   kernel-image-2.4.27-powerpc \
   kernel-image-2.4.27-powerpc-small \
   kernel-image-2.4.27-powerpc-smp \
+  kernel-image-2.6-power3 \
+  kernel-image-2.6-power3-smp \
+  kernel-image-2.6-powerpc \
+  kernel-image-2.6-powerpc-smp \
   kernel-image-2.6.8-power3 \
   kernel-image-2.6.8-power3-smp \
   kernel-image-2.6.8-powerpc \
