@@ -2,17 +2,25 @@ subarch powermac_newworld
 cpuinfo powermac_newworld.cpuinfo
 majors 2.4 2.6
 flavour powerpc
-kernel-2.4 kernel-image-2.4.27-powerpc
-kernel-2.6 kernel-image-2.6.8-powerpc
+kernel-2.4 kernel-image-2.4-powerpc
+kernel-2.6 kernel-image-2.6-powerpc
 usable \
+  kernel-image-2.4-powerpc \
+  kernel-image-2.4-powerpc-smp \
   kernel-image-2.4.27-powerpc \
   kernel-image-2.4.27-powerpc-small \
   kernel-image-2.4.27-powerpc-smp \
+  kernel-image-2.6-powerpc \
+  kernel-image-2.6-powerpc-smp \
   kernel-image-2.6.8-powerpc \
   kernel-image-2.6.8-powerpc-smp
 unusable \
   kernel-image-2.4.27-apus \
   kernel-image-apus \
+  kernel-image-2.6-power3 \
+  kernel-image-2.6-power3-smp \
+  kernel-image-2.6-power4 \
+  kernel-image-2.6-power4-smp \
   kernel-image-2.6.8-power3 \
   kernel-image-2.6.8-power3-smp \
   kernel-image-2.6.8-power4 \
