@@ -14,6 +14,7 @@ base-installer (1.17) UNRELEASED; urgency=low
     - kernel/tests/runtests and 'make test' in kernel/ exit non-zero on
       errors.
     - Run test suite automatically on package build.
+    - Install kernel-latest-powerpc metapackages.
   * Matt Kraai
     - Fix the spelling of "file system".
   * Steve Langasek
